--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <div class="adsBanner slideshow-container">
+        <div v-if="role === 2" class="adsBanner slideshow-container">
 
             <!-- Full-width images with number and caption text -->
             <!-- <div class="mySlides fade">
@@ -25,7 +25,7 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
         </div>
     </div>
-    <div class="panel-body addBg">
+    <div class="panel-body addBg" v-if="role === 2">
         <div class="row">
             <div class="modal" data-backdrop="static" role="dialog" id="primaryEmailPopup">
                 <div class="modal-dialog" v-if="serviceObj">
@@ -70,7 +70,8 @@
                             <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)"
                                 height="150" width="200">
                             <div class="serviceName">
-                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}} - ₹ {{service.Price}}</span>
+                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}} - ₹
+                                    {{service.Price}}</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
                                 @click="chooseOption(service, '1')">
@@ -88,5 +89,11 @@
 
             </div>
         </div>
+    </div>
+    <div class="panel-body addBg" v-if="role === 1">
+        <adminHomePage v-if="role === 1"></adminHomePage>
+    </div>
+    <div class="panel-body addBg" v-if="role === 3">
+        <servicePersonHomePage v-if="role === 3"></servicePersonHomePage>
     </div>
 </div>
