--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -12712,3 +12712,25 @@ body {
     font-style: normal;
     font-size: 14px;
 }
+
+.counter {
+    /* position: absolute; */
+    right: 0px;
+    top: -5px;
+    /* background: #ffffffe8; */
+    color: #fff;
+    width: 100%;
+    height: 25px;
+    font-size: 30px;
+    line-height: 24px;
+    // padding: 0 8px;
+    /* border: #eaeaea solid 1px; */
+    border-bottom: 0;
+    /* box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.31); */
+    /* border-right: 0; */
+    /* border-radius: 19px; */
+    font-weight: 400;
+    float: left;
+    margin-bottom: 4px;
+    margin-top: 5px;
+  }
