--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -62,6 +62,20 @@
                                                 v-model="newVehicleDetails.Parkinglot">
                                         </div>
                                         <div class="form-group">
+                                            <img :src="newVehicleDetails.VehicleImage"
+                                                v-if="newVehicleDetails.VehicleImage" style="height: 100px; width: 200px;" />
+
+                                            <label class="custom-file-upload">
+                                                <div>
+                                                    <i class="fa fa-upload" aria-hidden="true"></i>
+                                                    <input type="file" id="logo" name="logo" accept="image/*"
+                                                        @change="filesChange($event)" />
+                                                </div>
+
+                                            </label>
+
+                                        </div>
+                                        <div class="form-group">
                                             <label v-for="vehicleType in vehicleTypes">
                                                 <input type="radio" name="vehicleType"
                                                     @click="changeVehicleType(vehicleType, $event)"
@@ -117,7 +131,7 @@
                             <label class="radioLabel">
                                 <input type="radio" class="vechiles" name="Vechile" :value="product.VehicleId"
                                     @click="chooseVehicle(product, $event)">
-                                <img :src="product.ServiceImage ? product.ServiceImage : defaultImage" height="120"
+                                <img :src="product.VehicleImage ? product.VehicleImage : (product.VehicleTypeId == 2 ? defaultCarImage : defaultBikeImage)" height="120"
                                     width="120">
                             </label>
 
@@ -126,7 +140,7 @@
                             </div>
                         </div>
                         <div class="cell" @click="addNewVehicleInfo">
-                            <img :src="defaultImage" height="120" width="120">
+                            <img :src="defaultCarImage" height="120" width="120">
                             <div class="form-group serviceName">
                                 <a href="javascript:void(0)">Add New Car</a>
                             </div>
