--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -12734,3 +12734,11 @@ body {
     margin-bottom: 4px;
     margin-top: 5px;
   }
+  
+.orgLogBgDum{
+    width: 300px;
+    height: 200px;
+    display: block;
+    background:#f2f3f2 url(images/default-image.png) no-repeat 50%;
+    background-size: contain;
+  }
