--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -3974,7 +3974,7 @@ i.approveLeaveCount+h6,
 
 .proMask {
     position: absolute;
-    width: 400px;
+    // width: 400px;
     height: 400px;
     text-align: center;
     /* line-height: 484px; */
