--- a/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
+++ b/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
@@ -1,3 +1,127 @@
-<div>
-    
+<div class="row">
+    <div class="col-md-12">
+        <div class="" v-if="userProfile">
+            <div class="row" style="text-align: center;">
+                <div class="col-md-12"> Welcome Mr. {{userProfile.UserLastName + " " + userProfile.UserFirstName}}</div>
+            </div>
+            <div class="row" style="text-align: center;">
+                <div class="col-md-12"> {{todayDate}}</div>
+            </div>
+        </div>
+        <div class="" v-if="userProfile">
+            <div class="row">
+                <div class="col-md-12"> Total Items to be serviced : {{servieList.length}}</div>
+            </div>
+        </div>
+        <div class="" v-for="product in servieList" style="border: 1px solid #65ff00">
+            <div class="row">
+                <div class="col-md-10">
+                    {{product.AddressLine1}}
+                </div>
+                <div class="col-md-2">
+                    <input type="checkbox" checked="false" @click="taskStatusChangePopup(product)">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    {{product.ParkingLot}}
+                </div>
+                <div class="col-md-4">
+                    {{product.ServiceName}}
+                </div>
+                <div class="col-md-4">
+                    {{product.VehicleNumber}}
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" data-backdrop="static" role="dialog" id="taskStatusChangePopup" style="margin-top: -200px;">
+        <div class="modal-dialog" v-if="selectedProduct">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <!-- <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
+                        data-dismiss="modal">
+                        &times;
+                    </button> -->
+                    <!-- <h4>Add Vechile Details</h4> -->
+                </div>
+
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label>
+                                    Vehicle Number: {{selectedProduct.VehicleNumber}}
+                                </label>
+                            </div>
+                            <div class="form-group">
+                                <label>
+                                    Please confirm, <b>"{{selectedProduct.ServiceName}}"</b> is completed
+                                </label>
+
+                            </div>
+                            <div class="form-group">
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+                    <button class="btn btn-success btn-sm pull-right" title="Save User"
+                        @click="showConfirmationPopup('yes')">Yes</button>
+                    <button class="btn btn-danger btn-sm pull-right" title="Cancel"
+                        @click="showConfirmationPopup('no')">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" data-backdrop="static" role="dialog" id="serviceNotesPopup" style="margin-top: -350px;">
+        <div class="modal-dialog" v-if="selectedProduct">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <!-- <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
+                        data-dismiss="modal">
+                        &times;
+                    </button> -->
+                    <h4>{{selectedProduct.ServiceName  + ' - ' + selectedProduct.VehicleNumber }}</h4>
+                </div>
+
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            
+                            <div class="form-group">
+                                <label>Notes</label>
+                                <textarea v-model="selectedProduct.notes" rows="3" class="form-control"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label>Attachment</label>
+                                <label class="custom-file-upload">
+                                    <div>
+                                        <i class="fa fa-upload" aria-hidden="true"></i>
+                                        <input type="file" id="logo" name="logo" accept="image/*"
+                                            @change="filesChange($event)" />
+                                    </div>
+
+                                </label>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary btn-sm pull-right" title="Cancel"
+                        @click="closeConfirmationPopup">Cancel</button>
+                    <button class="btn btn-success btn-sm pull-right" title="Submit"
+                        @click="updateServiceDetails">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
