--- a/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
+++ b/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
@@ -13,9 +13,8 @@
             </div>
             <div class="panel-body addBg">
                 <div class="row">
-                    <div class="col-md-1 col-lg-2 col-xl-3"></div>
-                    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-xl-6">
-                        <div class="">
+                    <div class="col-md-12">
+                        <div class="row">
                             <!-- <div class="">
                             <label class="labels">Profile Picture:</label>
                             </div> -->
@@ -23,7 +22,8 @@
                                 class="proMask"></div>
                             <div class="profileHeader">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                                    <vue-avatar :width=200 :height=220 ref="vueavatar" @vue-avatar-editor:image-ready="onImageReady" image=''>
+                                    <vue-avatar :width=200 :height=220 ref="vueavatar"
+                                        @vue-avatar-editor:image-ready="onImageReady" image=''>
                                     </vue-avatar>
                                 </div>
 
@@ -32,20 +32,23 @@
                                         <label>{{userProfile.UserFirstName}} {{userProfile.UserLastName}}</label>
                                     </div>
                                     <div class="profileHeaderImgResize">Resize Image</div>
-                                    <vue-avatar-scale ref="vueavatarscale" @vue-avatar-editor-scale:change-scale="onChangeScale" :width=150 :min=1 :max=3 :step=0.02>
+                                    <vue-avatar-scale ref="vueavatarscale"
+                                        @vue-avatar-editor-scale:change-scale="onChangeScale" :width=150 :min=1 :max=3
+                                        :step=0.02>
                                     </vue-avatar-scale>
                                 </div>
 
                             </div>
                         </div>
+                        <div class="row">
 
-                        <div class="form-label profileDesig">
-                            <label class="labels">Email - </label>
-                            <label v-text="userProfile.email"></label>
+                            <div class="form-label profileDesig">
+                                <label class="labels">Email - </label>
+                                <label v-text="userProfile.email"></label>
+                            </div>
                         </div>
 
                     </div>
-                    <div class="col-md-1 col-lg-2 col-xl-3"></div>
                 </div>
             </div>
         </div>
