--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="cold-md-12" style="text-align: center;">
                 <label class="" style="font-size: 25px">Rs.
-                    {{userWallet.Amount ? userWallet.Amount : 'XXX.XX'}} /-</label>
+                    {{userWallet && userWallet.Amount ? userWallet.Amount : 'XXX.XX'}} /-</label>
             </div>
         </div>
         <div class="row">
