--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -211,7 +211,7 @@
 
                         <div class="form-group">
                             <label>
-                                Date
+                               Start Date
                             </label>
                             <datePickerComponent :keyString="'StartDate'" v-model="vehicleInfo.ServiceDate"
                                 :value="vehicleInfo.ServiceDate" :format="'Do MMM YYYY'" :onUpdate="updateServiceDate"
