--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -2,9 +2,42 @@
     <div>
         <h4>My Orders</h4>
     </div>
-    <div class="cellRow" v-for="product in subscriptions" style="border: 1px solid #c5c5c5; margin: 5px; padding: 5px;">
-        <orderItem :orderId="product.RequestId" :pauseOrder="pauseOrder" :resumeOrder="resumeOrder" :deleteOrder="deleteConfirm"></orderItem>
+
+    <div class="accordion" id="accordionExample">
+        <div class="card">
+            <div class="card-header" id="headingOne">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#collapseOne">
+                    <h5>Active Orders</h5>								
+                </h2>
+            </div>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                    <div class="cellRow" v-for="product in subscriptions" style="border: 1px solid #c5c5c5; margin: 5px; padding: 5px;">
+                        <orderItem :orderId="product.RequestId" :pauseOrder="pauseOrder" :resumeOrder="resumeOrder" :deleteOrder="deleteConfirm"></orderItem>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingTwo">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#collapseTwo">
+                    <!-- <button type="button" class="btn btn-link collapsed">History</button> -->
+                    <h5>History</h5>	
+                </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                    
+                    <div class="cellRow" v-for="product in inactiveOrders" style="border: 1px solid #c5c5c5; margin: 5px; padding: 5px;">
+                        <orderItem :orderId="product.RequestId" :pauseOrder="pauseOrder" :resumeOrder="resumeOrder" :deleteOrder="deleteConfirm"></orderItem>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    
 
 
     <div class="modal" data-backdrop="static" role="dialog" id="pauseServiceDetailsPopup">
