--- a/WebClient/src/components/adminModule/manageServicesComponent/manageServicesComponent.template.html
+++ b/WebClient/src/components/adminModule/manageServicesComponent/manageServicesComponent.template.html
@@ -9,19 +9,21 @@
             <div class="dTable">
                 <table style="width: 100%; overflow:scroll;">
                     <thead>
-                        <th>Actions</th>
                         <th>Service</th>
                         <th>Subscription</th>
                         <th>Amount</th>
+                        <th>Status</th>
                     </thead>
                     <tbody>
                         <tr v-for="service in serviceList" style="height: 50px;">
-                            <td>
 
-                            </td>
-                            <td @click="getServiceDetail(service)" style="cursor: pointer;"><b>{{service.ServiceName}}</b></td>
+                            <td @click="getServiceDetail(service)" style="cursor: pointer;">
+                                <b>{{service.ServiceName}}</b></td>
                             <td>{{service.SubscribeType ? service.SubscribeType : 'Once'}}</td>
                             <td>₹ {{service.ServiceType == 1 ? service.SubscriptionPrice : service.Price}}/-</td>
+                            <td>
+                                {{service.IsEnabled ? "Enabled" : "Disabled"}}
+                            </td>
                         </tr>
                     </tbody>
                 </table>
