--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -76,14 +76,14 @@
                                 height="150" width="200">
                             <div class="serviceName">
                                 <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}} - ₹
-                                    {{service.Price}}</span>
+                                    {{service.Price > 0 ?service.Price : service.SubscriptionPrice}}</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '1')">
+                                @click="chooseOption(service, '1')" v-if="service.SubscriptionPrice > 0">
                                 <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '2')">
+                                @click="chooseOption(service, '2')" v-if="service.Price > 0">
                                 <span class="">Purchase Once</span>
                             </div>
 
