--- a/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
+++ b/WebClient/src/components/adminModule/serviceDetailComponent/serviceDetailComponent.template.html
@@ -1,5 +1,6 @@
 <div v-if="serviceDetail" class="panel panel-default">
     <div class="panel-heading">
+        <h4>Service Details</h4>
         <div class="pull-right">
             <button class="btn btn-danger btn-sm" @click="Cancel">Cancel</button>
             <button class="btn btn-success btn-sm pull-right" @click="saveService">Save</button>
