--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -75,15 +75,15 @@
                             <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)"
                                 height="150" width="200">
                             <div class="serviceName">
-                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}} - ₹
-                                    {{service.Price > 0 ?service.Price : service.SubscriptionPrice}}</span>
+                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
+                                <span class="mt-3" style="font-weight: 500;">Starting from ₹ {{service.StartingPrice}}/-</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '1')" v-if="service.SubscriptionPrice > 0">
-                                <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
+                                @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
+                                <span class="">Subscribe @ ₹ {{service.StartingSubscriptionPrice}}/-</span>
                             </div>
                             <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '2')" v-if="service.Price > 0">
+                                @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
                                 <span class="">Purchase Once</span>
                             </div>
 
