--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -68,25 +68,33 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="cellRow serviceCards" style="width: 100%; overflow: scroll; margin-top: 20px;">
-                        <div class="cellCol" v-for="service in servieList"
-                            style="padding: 5px; border: 1px solid #ddd;flex: 0 0 12%;">
+                    <div class="cellRow serviceCards" style="width: 100%; overflow: scroll; margin-top: 20px;"
+                        v-for="(serviceCategory, vehicleCategoryType) in servicesList">
 
-                            <img :src="service.ServiceImage" class="serviceCardImg" @click="showMoreInfo(service)"
-                                height="150" width="200">
-                            <div class="serviceName">
-                                <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
-                                <span class="mt-3" style="font-weight: 500;">Starting from ₹ {{service.StartingPrice}}/-</span>
-                            </div>
-                            <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
-                                <span class="">Subscribe @ ₹ {{service.StartingSubscriptionPrice}}/-</span>
-                            </div>
-                            <div class="form-group purchaseButton" style="padding: 5px;"
-                                @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
-                                <span class="">Purchase Once</span>
-                            </div>
+                        <div class="cellrow">
+                            <h5>{{serviceCategory.VehicleCategoryTypeName}}</h5>
+                        </div>
+                        <div class="cellrow">
+                            <div class="cellCol" v-for="(service, vehicleCategoryType) in serviceCategory.services"
+                                style="padding: 5px; border: 1px solid #ddd;flex: 0 0 12%;">
 
+                                <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
+                                    class="serviceCardImg" @click="showMoreInfo(service)" height="150" width="200">
+                                <div class="serviceName">
+                                    <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
+                                    <span class="mt-3" style="font-weight: 500;">Starting from ₹
+                                        {{service.StartingPrice}}/-</span>
+                                </div>
+                                <div class="form-group purchaseButton" style="padding: 5px;"
+                                    @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
+                                    <span class="">Subscribe @ ₹ {{service.StartingSubscriptionPrice}}/-</span>
+                                </div>
+                                <div class="form-group purchaseButton" style="padding: 5px;"
+                                    @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
+                                    <span class="">Purchase Once</span>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
