Services CRUD and Vehicle CRUD

--- a/WebClient/src/components/adminModule/assignServiceComponent/assignServiceComponent.template.html
+++ b/WebClient/src/components/adminModule/assignServiceComponent/assignServiceComponent.template.html
@@ -11,7 +11,7 @@
             <span v-if="serviceType === 3">Showing , </span>
             <span v-if="serviceType === 4">Showing , </span>
 
-            <span style="font-size: 12px">{{pendingServices.length}} Services</span>
+            <span style="font-size: 12px">{{pendingServices.length}} Assign Services</span>
         </span>
     </div>
     <div class="panel-body">
