--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -83,11 +83,11 @@
                                 <div class="serviceName">
                                     <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
                                     <span class="mt-3" style="font-weight: 500;">Starting from ₹
-                                        {{service.StartingPrice}}/-</span>
+                                        {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                                 </div>
                                 <div class="form-group purchaseButton" style="padding: 5px;"
                                     @click="chooseOption(service, '1')" v-if="service.IsSubscriptionEnabled">
-                                    <span class="">Subscribe @ ₹ {{service.StartingSubscriptionPrice}}/-</span>
+                                    <span class="">Subscribe @ ₹ {{service.StartingSubscriptionPrice ? service.StartingSubscriptionPrice : service.SubscriptionPrice}}/-</span>
                                 </div>
                                 <div class="form-group purchaseButton" style="padding: 5px;"
                                     @click="chooseOption(service, '2')" v-if="service.IsPurchaseOnceEnabled">
